<resources>
    <string name="app_name">G16_CarShowroomApp</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="car_name_hint">Car Name</string>
    <string name="car_model_hint">Car Model</string>
    <string name="car_cost_hint">Car Cost</string>
    <string name="car_date_hint">Car Date</string>
    <string name="rent_text"><b>Rent</b></string>
    <string name="sale_text"><b>Sale</b></string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="settings_title">Settings</string>
    <string name="theme_title" translatable="false">Theme</string>
    <string name="theme_light" translatable="false">Light</string>
    <string name="theme_dark" translatable="false">Dark</string>
    <string name="button_done" translatable="false">Done</string>
    <string name="title_activity_settings">Options</string>
    <string name="add_new_car"><b>Add New Car</b></string>
    <string name="your_car">Your Car</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="situation"><b>Situation: </b></string>
    <string name="year"><b>Year: </b></string>
    <string name="price"><b>Price: </b></string>
    ”
</resources>
